welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: ')' expected but integer literal found.
		else if (speed >= 66 speed =< 86)
                                              ^caughtSpeeding:9: error: illegal start of simple expression
	}
        ^